refresh.xpmをターゲットに追加 2013-05-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>
	* Makefile.am:
	 - refresh.xpmを追加

--- a/Makefile.am
+++ b/Makefile.am
@@ -94,6 +94,7 @@ EXTRA_DIST = \
 	xpm/open_dir.xpm \
 	xpm/open_rcg.xpm \
 	xpm/record.xpm \
+	xpm/refresh.xpm \
 	xpm/replace.xpm \
 	xpm/reverse.xpm \
 	xpm/save.xpm \
