ChainをActionSequenceへリネーム．ビューでソートを有効化 2013-05-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>
	* src/model/Makefile.am:
	* src/model/action_sequence_description.cpp:
	* src/model/action_sequence_description.h:
	* src/model/action_sequence_log_parser.cpp:
	* src/model/action_sequence_log_parser.h:
	* src/model/main_data.cpp:
	* src/model/main_data.h:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/evaluator_control_panel.cpp:
	* src/model/chain_action_data.cpp:
	* src/model/action_sequence_description.cpp:
	* src/model/chain_action_data.h:
	* src/model/action_sequence_description.h:
	* src/model/chain_action_log_parser.cpp:
	* src/model/action_sequence_log_parser.cpp:
	* src/model/chain_action_log_parser.h:
	* src/model/action_sequence_log_parser.h:
	 - ChainをActionSequenceへリネーム
	 - 行動列ビューでソートを有効化

--- a/src/model/Makefile.am
+++ b/src/model/Makefile.am
@@ -4,8 +4,8 @@ noinst_LIBRARIES = \
 	libsoccerwindow2_model.a
 
 libsoccerwindow2_model_a_SOURCES = \
-	chain_action_data.cpp \
-	chain_action_log_parser.cpp \
+	action_sequence_description.cpp \
+	action_sequence_log_parser.cpp \
 	debug_client_parser.cpp \
 	debug_log_data.cpp \
 	debug_log_holder.cpp \
@@ -22,8 +22,8 @@ libsoccerwindow2_model_a_SOURCES = \
 
 noinst_HEADERS = \
 	agent_data_holder.h \
-	chain_action_log_parser.h \
-	chain_action_data.h \
+	action_sequence_description.h \
+	action_sequence_log_parser.h \
 	debug_client_parser.h \
 	debug_log_data.h \
 	debug_log_holder.h \
