--- a/src/qt4/Makefile.am
+++ b/src/qt4/Makefile.am
@@ -7,6 +7,7 @@ endif
 bin_PROGRAMS = $(BUILD_PROGS)
 
 soccerwindow2_SOURCES = \
+	action_sequence_option_window.cpp \
 	action_sequence_selector.cpp \
 	action_sequence_tree_view.cpp \
 	ball_painter.cpp \
@@ -46,6 +47,7 @@ soccerwindow2_SOURCES = \
 	voronoi_diagram_painter.cpp
 
 nodist_soccerwindow2_SOURCES = \
+	moc_action_sequence_option_window.cpp \
 	moc_action_sequence_selector.cpp \
 	moc_action_sequence_tree_view.cpp \
 	moc_color_setting_dialog.cpp \
@@ -67,6 +69,7 @@ nodist_soccerwindow2_SOURCES = \
 	moc_view_config_dialog.cpp
 
 noinst_HEADERS = \
+	action_sequence_option_window.h \
 	action_sequence_selector.h \
 	action_sequence_tree_view.h \
 	ball_painter.h \
