Ubuntu18への対応.C++14を要求するように変更
	modified:   ChangeLog
	modified:   configure.ac
	modified:   m4/ax_boost_base.m4
	new file:   m4/ax_boost_system.m4
	new file:   m4/ax_cxx_compile_stdcxx.m4
	new file:   m4/ax_cxx_compile_stdcxx_14.m4
	modified:   src/qt4/main.cpp
	modified:   src/qt4/main_window.cpp

--- a/configure.ac
+++ b/configure.ac
@@ -91,11 +91,19 @@ fi
 #  AM_CONDITIONAL(BUILD_WX, [test "1" = "0"])
 #fi
 
+##################################################
+# check C++
+##################################################
+
+AX_CXX_COMPILE_STDCXX_14(noext)
+
 # ----------------------------------------------------------
 # check boost
 AX_BOOST_BASE([1.38.0])
+AX_BOOST_SYSTEM
 CPPFLAGS="$CPPFLAGS $BOOST_CPPFLAGS"
 LDFLAGS="$LDFLAGS $BOOST_LDFLAGS"
+LIBS="$LIBS $BOOST_SYSTEM_LIB"
 
 # check boost library for wx
 #if test "x$enable_wx" == "xyes"; then
