--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.61)
-AC_INIT([soccerwindow2], [20160613], [akky@users.sourceforge.jp])
+AC_INIT([soccerwindow2], [2020.08], [akky@users.sourceforge.jp])
 
 AC_CONFIG_SRCDIR([config.h.in])
 AC_CONFIG_HEADERS([config.h])
@@ -37,7 +37,7 @@ AC_PROG_INSTALL
 
 # ----------------------------------------------------------
 # check Qt
-AC_ARG_ENABLE(qt5,
+AC_ARG_ENABLE(qt4,
               AC_HELP_STRING([--enable-qt4],
                              [use Qt4 tool kit instead of Qt5 (default no)]))
 AC_ARG_ENABLE(gl,
