--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(model STATIC
   debug_log_data.cpp
   debug_log_holder.cpp
   debug_view_data.cpp
+  draw_data_holder.cpp
   field_evaluator_message_parser.cpp
   game_event_holder.cpp
   game_event_log_parser.cpp
