FormationEditorWindowクラスを追加．

--- a/src/qt/CMakeLists.txt
+++ b/src/qt/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(soccerwindow2
   field_evaluation_painter.cpp
   field_painter.cpp
   font_setting_dialog.cpp
+  formattion_editor_window.cpp
   image_save_dialog.cpp
   launcher_dialog.cpp
   log_player.cpp
