--- a/src/qt/Makefile.am
+++ b/src/qt/Makefile.am
@@ -27,6 +27,7 @@ soccerwindow2_SOURCES = \
 	field_painter.cpp \
 	field_evaluation_painter.cpp \
 	font_setting_dialog.cpp \
+	formation_editor_window.cpp \
 	image_save_dialog.cpp \
 	launcher_dialog.cpp \
 	log_player.cpp \
@@ -60,6 +61,7 @@ nodist_soccerwindow2_SOURCES = \
 	moc_dir_selector.cpp \
 	moc_field_canvas.cpp \
 	moc_font_setting_dialog.cpp \
+	moc_formation_editor_window.cpp \
 	moc_image_save_dialog.cpp \
 	moc_launcher_dialog.cpp \
 	moc_log_player.cpp \
@@ -92,6 +94,7 @@ noinst_HEADERS = \
 	field_painter.h \
 	field_evaluation_painter.h \
 	font_setting_dialog.h \
+	formation_editor_window.h \
 	image_save_dialog.h \
 	launcher_dialog.h \
 	log_player.h \
