Integrate a formation editor (#29)
* フォーメーションエディタとの統合に向けて、編集データ管理クラスをfedit2から移植

* フォーメーションエディタ用のGDIオブジェクトを追加し、色とフォントの設定読み書きを実装

* 視認性改善のためのコメント行を追加

* FormationEditorWindowクラスを追加．

* FormationEditorWindowを表示するアクションを追加

* ショートカットキーダイアログにデスクリプション列を追加

* FormationEditorの操作パネルを追加．スロットの中身は未実装．

* FormationEditorWindow操作パネルの内部ロジックを移植

* FormationEditorWindowにfedit2のスロット関数を移植するための準備．中身は未実装．

* fedit2から主要アクションを移植．ツールバーを追加．

* フォーメーションデータをツリー表示するウィジェットクラスをfedit2から移植

* FormationEditorWindowのUI機能をほぼ移植

* FormationEditorWindow表示のショートカットキーを追加

* FormationEditorWindow内のウィジェット配置を調整

* FormationEditorPainterを追加し，三角形分割の描画機能を移植

* 動作確認用メッセージを削除

* フォーメーションエディタ描画の透明度パラメータを追加

* フォーメーションエディタの描画機能を移植

* fedit modeオプションを追加．このフラグがtrueの場合のみフォーメーションエディタとして動作することを想定．

* フォーメーションファイルをコマンドライン指定で開くためのオプションを追加

* FormationEditorWindowを隠した場合にもモードが切り替わるように修正

* フォーメーションエディタのマウス操作を実装

* フォーメーションエディタの描画位置ずれを修正

* プレイヤ選択のインデックスの誤りを修正

* フォーメーションエディタ上のボール位置をフィールドのボール位置と同期させるモード切替機能を追加

* FormationEditDataの実体をMainData内へ移動

* ログプレイヤのインデックス更新時にフォーメーションエディタとフィールドでボール位置を同期する機能を実装

* FormationEditorPainterに描画スイッチオプションを反映

* FormationEditorPainterに背景フォーメーションの選手描画機能を追加

* FormationEditorWindowにデータクリア機能を追加

--- a/src/qt/CMakeLists.txt
+++ b/src/qt/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(soccerwindow2
   ball_painter_rcss.cpp
   ball_trace_painter.cpp
   color_setting_dialog.cpp
+  coordinate_delegate.cpp
   debug_log_dir_dialog.cpp
   debug_log_painter.cpp
   debug_message_window.cpp
@@ -22,6 +23,9 @@ add_executable(soccerwindow2
   field_evaluation_painter.cpp
   field_painter.cpp
   font_setting_dialog.cpp
+  formation_data_view.cpp
+  formattion_editor_painter.cpp
+  formattion_editor_window.cpp
   image_save_dialog.cpp
   launcher_dialog.cpp
   log_player.cpp
