FeaturesLogHolderを改めて追加．ファイル読み込み処理を追加．

--- a/src/model/Makefile.am
+++ b/src/model/Makefile.am
@@ -12,6 +12,7 @@ libsoccerwindow2_model_a_SOURCES = \
 	debug_view_data.cpp \
 	draw_data_holder.cpp \
 	draw_data_parser.cpp \
+	features_log.cpp \
 	features_log_parser.cpp \
 	field_evaluator_message_parser.cpp \
 	formation_edit_data.cpp \
