機械学習用のラベルエディタ機能を追加 (#38)
* 未使用の機能をobsoleteへ移動

* LabelEditorWindowを追加し，ウインドウを表示するメニューを追加

* 不要な変数を削除

* LabelEditorWindowにアクションとツールバーの生成処理を追加

* DebugMessageWindowで使用されていなかったボタンの生成処理をコメントアウト

* 使用されていなかった人力訓練用の実装をコメントアウト

* 特徴量ログのデータ型とパーサのドラフト実装を追加

* FeaturesLogがタスクごとに別ファイルに保存される想定のフォーマット用にパーサを修正

* グループIDを試合時間のペアに変更

* FeaturesLogのGroup IDを廃止し，GameTimeへ置き換え

* FeaturesLogHolderをWholeFeaturesLogへリネーム

* FeaturesLogHolderを改めて追加．ファイル読み込み処理を追加．

* FeaturesLogParserの各メソッドを結合

* FeaturesLogHolder::getData()を追加

* FeaturesLogHolder::clear()を追加

* WholeFeaturesLog::groupMapをtimedMapへリネーム

* MainDataへFeaturesLogHolderを追加．ファイルオープンのメソッドを追加

* FeaturesLogのフォーマットを修正．setHeaderをsetFeatureNamesへリネーム

* FeaturesLogParserのdescriptionのパース処理を修正

* FeaturesLogの時刻情報のフォーマットを修正

* 描画情報のデータタイプを分離

* DrawDataを複数同時に記述できるフォーマットへ変更

* Drawデータの文字列（色情報を含む）を二重引用符で囲うフォーマットに変更

* DrawDataParserのデータハンドリングをDrawDataHandlerで抽象化

* 描画データをまとめて保持するDrawGroupを追加

* FeaturesLogに直接DrawGroupを保持する方針に変更

* FeaturesLogを単純なCSV出力するメソッドを追加

* FeaturesLogPaserの誤りを修正

* FeaturesLogを開くアクションをLabelEditorへ追加

* エディターウインドウ表示のショートカットを変更．Featuresを開くボタンを追加．

* FeaturesLogParserの誤りを修正．メソッド名のColumnNamesをFeatureNamesへ変更．

* FeaturesLogの描画データのフォーマット変更に対応

* LabelEditorWindowのテーブル表示をテスト実装

* LabelEditorWindowのセル設定の変更．ドラッグ＆ドロップの設定をテスト．

* LabelEditorWindowの修正．数値でのソート．RankLabel追加．元のlabelをscore変更．

* LabelEditorのランク列の名前をRankScoreへ変更

* LabelEditorのRankLabel列に整数値の範囲を制限するDelegateを設定

* LabelEditorのテーブルを完全クリアするメソッドを追加

* LabelEditorのrowCountの誤りを修正．IntegerDelegeteのオーナーを明示的に設定

* LabelEditorの値変更シグナルとスロットを追加．内部は未実装．

* LabelEditorWindowをQTreeWidgetへ変更

* LabelEditorWindow上で選択した特徴量の詳細表示するための準備

* LabelEditorWindowをRankingEditorWindowへリネーム

* 特徴量ベクトルを詳細表示するためのウィジェットを追加し，QSplitterで並べて表示

* RankingEditorWindowの tree view を label view へリネーム

* RankingEditorに選択したデータの特徴量ベクトルを表示する機能を追加

* RankingEditor修正．特徴量名の列を初期設定時の一回のみ更新に変更

* RankingEditorにゲーム時間リストを追

--- a/src/qt/CMakeLists.txt
+++ b/src/qt/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(soccerwindow2
   draw_data_painter.cpp
   evaluation_window.cpp
   evaluator_control_panel.cpp
+  features_log_painter.cpp
   field_canvas.cpp
   field_evaluation_painter.cpp
   field_painter.cpp
@@ -28,6 +29,7 @@ add_executable(soccerwindow2
   formattion_editor_window.cpp
   image_save_dialog.cpp
   launcher_dialog.cpp
+  ranking_editor_window.cpp
   log_player.cpp
   log_player_tool_bar.cpp
   main.cpp
