--- a/src/qt/Makefile.am
+++ b/src/qt/Makefile.am
@@ -24,14 +24,15 @@ soccerwindow2_SOURCES = \
 	dir_selector.cpp \
 	draw_config.cpp \
 	draw_data_painter.cpp \
+	features_log_painter.cpp \
 	field_canvas.cpp \
 	field_painter.cpp \
-	field_evaluation_painter.cpp \
 	font_setting_dialog.cpp \
 	formation_data_view.cpp \
 	formation_editor_painter.cpp \
 	formation_editor_window.cpp \
 	image_save_dialog.cpp \
+	label_editor_window.cpp \
 	launcher_dialog.cpp \
 	log_player.cpp \
 	log_player_tool_bar.cpp \
@@ -68,6 +69,7 @@ nodist_soccerwindow2_SOURCES = \
 	moc_formation_data_view.cpp \
 	moc_formation_editor_window.cpp \
 	moc_image_save_dialog.cpp \
+	moc_label_editor_window.cpp \
 	moc_launcher_dialog.cpp \
 	moc_log_player.cpp \
 	moc_log_player_tool_bar.cpp \
@@ -96,14 +98,15 @@ noinst_HEADERS = \
 	dir_selector.h \
 	draw_config.h \
 	draw_data_painter.h \
+	features_log_painter.h \
 	field_canvas.h \
 	field_painter.h \
-	field_evaluation_painter.h \
 	font_setting_dialog.h \
 	formation_data_view.h \
 	formation_editor_painter.h \
 	formation_editor_window.h \
 	image_save_dialog.h \
+	label_editor_window.h \
 	launcher_dialog.h \
 	log_player.h \
 	log_player_tool_bar.h \
