SimpleLabelSelectorを実装．サイクルごとにラベルをつけてCSVで保存可能．

--- a/src/qt/Makefile.am
+++ b/src/qt/Makefile.am
@@ -47,6 +47,7 @@ soccerwindow2_SOURCES = \
 	player_type_dialog.cpp \
 	score_board_painter.cpp \
 	score_board_painter_rcss.cpp \
+	simple_label_selector.cpp \
 	shortcut_keys_dialog.cpp \
 	team_graphic_painter.cpp \
 	trainer_dialog.cpp \
@@ -77,6 +78,7 @@ nodist_soccerwindow2_SOURCES = \
 	moc_monitor_client.cpp \
 	moc_player_type_dialog.cpp \
 	moc_shortcut_keys_dialog.cpp \
+	moc_simple_label_selector.cpp \
 	moc_trainer_dialog.cpp \
 	moc_view_config_dialog.cpp
 
@@ -123,6 +125,7 @@ noinst_HEADERS = \
 	score_board_painter.h \
 	score_board_painter_rcss.h \
 	shortcut_keys_dialog.h \
+	simple_label_selector.h \
 	team_graphic_painter.h \
 	trainer_dialog.h \
 	view_config_dialog.h \
