--- a/src/qt/CMakeLists.txt
+++ b/src/qt/CMakeLists.txt
@@ -44,6 +44,7 @@ add_executable(soccerwindow2
   score_board_painter.cpp
   score_board_painter_rcss.cpp
   shortcut_keys_dialog.cpp
+  simple_label_selector.cpp
   team_graphic_painter.cpp
   trainer_dialog.cpp
   view_config_dialog.cpp
